syntax = "proto3";

package scufflecloud.email.v1;

import "google/protobuf/empty.proto";
import "tinc/annotations.proto";

service EmailService {
  rpc SendEmail(Email) returns (google.protobuf.Empty);
}

message EmailAddress {
  string address = 1 [(tinc.field).constraint.string.email = true];
  optional string name = 2;
}

message Email {
  EmailAddress from = 1;
  EmailAddress to = 2;
  string subject = 3;
  string text = 4;
  string html = 5;
}
